BitcoinJ and BouncyCastle removed from Android build.